--- a/code/Try47.Rmd
+++ b/code/Try47.Rmd
@@ -488,16 +488,33 @@ write.csv(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".csv"))
 ##4 FULL-FACTORIAL ANOVA (RQ answers)
 ```{r}
 # ---- Gamma (Part 2 interaction): bias, SE, coverage ----
+# all_df_gamma <- all_df %>%
+#   dplyr::filter(model == "gamma") %>%
+#   dplyr::mutate(
+#     n = factor(n),
+#     prop_extreme = factor(prop_extreme),
+#     magnitude_level = factor(magnitude_level),
+#     treatment = factor(treatment),
+#     cover_ind = ifelse(is.na(est) | is.na(se), NA_real_,
+#                        as.numeric((est - 1.96*se <= true) & (true <= est + 1.96*se)))
+#   )
+
+# --- Build replicate-level coverage indicator for the Gamma model ---
 all_df_gamma <- all_df %>%
   dplyr::filter(model == "gamma") %>%
   dplyr::mutate(
-    n = factor(n),
-    prop_extreme = factor(prop_extreme),
-    magnitude_level = factor(magnitude_level),
-    treatment = factor(treatment),
-    cover_ind = ifelse(is.na(est) | is.na(se), NA_real_,
-                       as.numeric((est - 1.96*se <= true) & (true <= est + 1.96*se)))
-  )
+    cover_ind = dplyr::if_else(
+      is.na(est) | is.na(se) | is.na(true),
+      NA_real_,
+      as.numeric((est - 1.96*se <= true) & (true <= est + 1.96*se))
+    ),
+    # ensure factors for ANOVA
+    n = as.factor(n),
+    prop_extreme = as.factor(prop_extreme),
+    magnitude_level = as.factor(magnitude_level),
+    treatment = forcats::fct_relevel(treatment, "raw","topcode","mean_adj","median_adj","truncate")
+  ) %>%
+  dplyr::filter(!is.na(cover_ind))    # drop reps where fits failed
 
 saveRDS(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".RDS")))
 write.csv(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".csv")), row.names = FALSE)
@@ -511,6 +528,9 @@ write.csv(
   tidy_aov,
   here::here(paste0("results/aov_gamma_bias_", dt, ".csv")))
 
+eta_squared(aov_gamma_bias, partial=TRUE) # for partial eta squared (or general?)
+
+
 # B) factorial ANOVA on gamma SE (rep-level)  <-- model SE
 # aov_gamma_se <- aov(se ~ treatment * n * prop_extreme * magnitude_level, data = all_df_gamma)
 # summary(aov_gamma_se)
@@ -520,14 +540,28 @@ summ_grid_gamma <- summ_grid |> filter(model=="gamma")
 aov_gamma_emp_se <- aov(
 	emp_se ~ treatment * n * prop_extreme * magnitude_level, data = summ_grid_gamma )
 summary(aov_gamma_emp_se) 
+eta_squared(aov_gamma_emp_se, partial=TRUE) # for partial eta squared (or general?)
 
 # C) coverage: scenario-level proportion (recommended)
-cov_grid <- all_df_gamma %>%
-  group_by(treatment, n, prop_extreme, magnitude_level) %>%
-  summarise(coverage = mean(cover_ind, na.rm = TRUE), .groups = "drop")
+# cov_grid <- all_df_gamma %>%
+#   group_by(treatment, n, prop_extreme, magnitude_level) %>%
+#   summarise(coverage = mean(cover_ind, na.rm = TRUE), .groups = "drop")
+# 
+# aov_gamma_cov <- aov(coverage ~ treatment * n * prop_extreme * magnitude_level, data = cov_grid)
+# summary(aov_gamma_cov)
+# eta_squared(aov_gamma_cov, partial=TRUE) 
 
-aov_gamma_cov <- aov(coverage ~ treatment * n * prop_extreme * magnitude_level, data = cov_grid)
-summary(aov_gamma_cov)
+## ^^ effect size won't run because only one row per. Need to re-do: 
+
+
+# --- Full factorial at replicate level now has residual df (many reps per cell) ---
+aov_gamma_cov_rep <- aov(
+  cover_ind ~ treatment * n * prop_extreme * magnitude_level,
+  data = all_df_gamma
+)
+
+# Sanity check: residual df should be > 0
+summary(aov_gamma_cov_rep)[[1]]["Residuals","Df"]
 
 # ---- ATT (RQ4): ATT_hat, ATT_bias, and effect size across treatments ----
 all_df_att <- all_df %>%
@@ -1021,40 +1055,91 @@ eta_with_p <- function(aov_obj, model_label,
                        include_ci = TRUE, conf_level = 0.90) {
   type <- match.arg(type)
 
-  # 1) p-values from ANOVA table (works for aov() and car::Anova() once tidied)
-  tab_p <- broom::tidy(aov_obj) %>%
+  # ---- 1) Get a tidy ANOVA table and a reliable p-value column ----
+  # Try broom::tidy() first
+  tab <- tryCatch(broom::tidy(aov_obj), error = function(e) NULL)
+
+  if (is.null(tab)) {
+    # Fallback: coerce to data.frame (works for car::Anova and aov objects)
+    tab <- as.data.frame(aov_obj)
+    # Move term names from rownames into a column
+    tab <- tibble::rownames_to_column(tab, var = "term")
+  }
+
+  # Normalize the 'term' column name if broom gave a different label
+  if (!("term" %in% names(tab))) {
+    term_col <- grep("^term$|^Term$|^Effect$|^Parameter$", names(tab), value = TRUE)
+    if (length(term_col) == 1L) names(tab)[names(tab) == term_col] <- "term"
+  }
+
+  # Identify/construct p-values:
+  if (!("p.value" %in% names(tab))) {
+    # Look for common alternatives like Pr(>F), Pr..F., etc.
+    pv_alt <- grep("^Pr\\(>F\\)$|^Pr[.].*F[.]?$|^pval$|^p_value$", names(tab), value = TRUE)
+    if (length(pv_alt) == 1L) {
+      names(tab)[names(tab) == pv_alt] <- "p.value"
+    } else {
+      # As a last resort, try to compute p from F and dfs
+      # Find F statistic and dfs
+      f_col   <- grep("^F$|^F value$|^statistic$", names(tab), value = TRUE)
+      df1_col <- grep("^df$|^Df1$|^num_df$|^num\\.df$", names(tab), value = TRUE)
+      df2_col <- grep("^Df2$|^den_df$|^den\\.df$|^Residuals|^residual.df$|^error.df$", names(tab), value = TRUE)
+
+      if (length(f_col) == 1L && length(df1_col) >= 1L && length(df2_col) >= 1L) {
+        # Heuristic: If there is a single 'df' column, it might be numerator df; get denominator df from residuals row if present
+        if (length(df1_col) == 1L && length(df2_col) == 1L) {
+          Fval <- tab[[f_col]]
+          df1  <- tab[[df1_col]]
+          df2  <- tab[[df2_col]]
+          tab$p.value <- stats::pf(Fval, df1, df2, lower.tail = FALSE)
+        } else {
+          # If structure is ambiguous, set NA and let the rest continue
+          tab$p.value <- NA_real_
+        }
+      } else {
+        tab$p.value <- NA_real_
+      }
+    }
+  }
+
+  # Keep only needed columns and drop residuals row if present
+  tab_p <- tab %>%
     dplyr::filter(!is.na(term), term != "Residuals") %>%
     dplyr::select(term, p.value)
 
-  # 2) effect sizes from effectsize::eta_squared()
-  #    NOTE: ci level is passed via 'ci', not 'ci_level'
+  # ---- 2) effect sizes from effectsize::eta_squared() ----
   ci_arg <- if (include_ci) conf_level else NULL
   es <- switch(
     type,
     eta2 = effectsize::eta_squared(aov_obj, ci = ci_arg),
     partial = effectsize::eta_squared(aov_obj, partial = TRUE, ci = ci_arg),
     generalized = effectsize::eta_squared(aov_obj, generalized = TRUE, ci = ci_arg)
-  ) %>%
-    as.data.frame()
+  ) %>% as.data.frame()
 
-  # effectsize names are typically: Parameter, Eta2, CI_low, CI_high
-  # We'll standardize/guard against name variations just in case.
+  # Standardize common column names
   nm <- names(es)
-  # Map names safely
-  if ("Parameter" %in% nm) names(es)[names(es) == "Parameter"] <- "term"
-  if ("Eta2" %in% nm) names(es)[names(es) == "Eta2"] <- "eta2"
-  if ("CI_low" %in% nm) names(es)[names(es) == "CI_low"] <- "ci_low"
-  if ("CI_high" %in% nm) names(es)[names(es) == "CI_high"] <- "ci_high"
+  if ("Parameter" %in% nm) names(es)[nm == "Parameter"] <- "term"
+  if ("Effect"    %in% nm) names(es)[nm == "Effect"]    <- "term"
+  if ("Term"      %in% nm) names(es)[nm == "Term"]      <- "term"
 
-  # 3) merge and label
+  eta_col <- grep("^Eta2", names(es), value = TRUE)
+  if (length(eta_col) == 1L) names(es)[names(es) == eta_col] <- "eta2"
+  if ("CI_low"  %in% names(es)) names(es)[names(es) == "CI_low"]  <- "ci_low"
+  if ("CI_high" %in% names(es)) names(es)[names(es) == "CI_high"] <- "ci_high"
+  if (!("ci_low" %in% names(es))) {
+    ci_low_guess <- grep("^CI[_\\.]?low", names(es), value = TRUE)
+    if (length(ci_low_guess) == 1L) names(es)[names(es) == ci_low_guess] <- "ci_low"
+  }
+  if (!("ci_high" %in% names(es))) {
+    ci_high_guess <- grep("^CI[_\\.]?high", names(es), value = TRUE)
+    if (length(ci_high_guess) == 1L) names(es)[names(es) == ci_high_guess] <- "ci_high"
+  }
+
+  # ---- 3) Merge and label ----
   out <- dplyr::left_join(es, tab_p, by = "term") %>%
     dplyr::mutate(
       model  = model_label,
-      es_type = switch(type,
-        eta2 = "eta^2",
-        partial = "partial eta^2",
-        generalized = "generalized eta^2"
-      ),
+      es_type = switch(type, "eta2" = "eta^2", "partial" = "partial eta^2", "generalized" = "generalized eta^2"),
       stars = dplyr::case_when(
         !is.na(p.value) & p.value < .001 ~ "***",
         !is.na(p.value) & p.value < .01  ~ "**",
@@ -1063,11 +1148,12 @@ eta_with_p <- function(aov_obj, model_label,
         TRUE ~ ""
       )
     ) %>%
-    dplyr::select(model, es_type, term, eta2, ci_low, ci_high, p.value, stars)
+    dplyr::select(model, es_type, term, eta2,
+                  dplyr::any_of(c("ci_low", "ci_high")),
+                  p.value, stars)
 
   out
 }
-
 ```  
 
 Apply to ANOVAs and build tables 
